syntax = "proto3";

service OrderService {
  rpc AddOrder(NewOrderRequest) returns (OrderResponse) {}
  rpc CancelOrder(OrderRequest) returns (StatusResponse) {}
  rpc FindOrder(OrderRequest) returns (OrderResponse) {}
  rpc FindUserOrders(UserOrdersRequest) returns (OrdersResponse) {}
}

// Requests
message OrderRequest{
  string orderID = 1;
  string userID = 2;
}

message UserOrdersRequest{
  string userID = 1;
}

message NewOrderRequest {
  string userID  = 1;
  string marketName = 2;
  string side = 3;
  double size = 4;
  string type = 5;
}

// Responses
message Order {
  string orderID = 1;
  string userID = 2;
  string marketName = 3;
  string side = 4;
  double size = 5;
  string type = 6;
  string status = 7;
  string createdOn = 8;
  string updatedOn = 9;
}

message OrderData {
  Order order = 1;
}

message OrderList {
  repeated Order orders = 1;
}

message OrdersResponse {
  string status = 1;
  string message = 2;
  OrderList data = 3;
}

message OrderResponse {
  string status = 1;
  string message = 2;
  OrderData data = 3;
}

message StatusResponse {
  string status = 1;
  string message = 2;
}
